crates/lang/macro/tests/ui/fail/M-10-method-unknown-pro-marker.stderr
error: unknown pro! attribute (path)
  --> $DIR/M-10-method-unknown-pro-marker.rs:17:15
   |
17 |         #[pro(unknown_marker)]
   |               ^^^^^^^^^^^^^^
